--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "918463a7",
+   "id": "5771fef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7bb0c38a",
+   "id": "1f954823",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "267d4351",
+   "id": "8c7b872e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b047e958",
+   "id": "ed64b8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "408bacf1",
+   "id": "f9af6ec6",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8f3166ce",
+   "id": "9a4a640e",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d93cce",
+   "id": "151845fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d0f196d",
+   "id": "f1747e6b",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "10585027",
+   "id": "736b3b2c",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5451998c",
+   "id": "909060f5",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "af96d2bb",
+   "id": "b2a234d9",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "10b3d9b1",
+   "id": "b6e92ab1",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d6f64409",
+   "id": "131423c3",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99d2d74e",
+   "id": "1f72018b",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ef93f7a9",
+   "id": "91ad0476",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3e080cc3",
+   "id": "7a6d1085",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c97dad18",
+   "id": "686d9010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7a95b844",
+   "id": "1182badf",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ccb6d299",
+   "id": "16fbf419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ed1a6cab",
+   "id": "97eb51fc",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a531f3c9",
+   "id": "9cef31a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0bfec0ab",
+   "id": "f49efbb1",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d5621feb",
+   "id": "48c5d248",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "388823d3",
+   "id": "f45d119b",
    "metadata": {},
    "outputs": [
     {
@@ -1065,8 +1065,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "5e821d5d",
+   "execution_count": 54,
+   "id": "46d4a254",
    "metadata": {},
    "outputs": [
     {
@@ -1079,6 +1079,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -1120,26 +1129,8 @@
     "plt.text(42, 35, \"Note: Circle size correlates with driver count per city.\", fontsize=\"12\")\n",
     "\n",
     "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "5f20eaa4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "plt.show()\n",
+    "\n",
     "# Save the figure.\n",
     "\n",
     "plt.savefig(\"/Users/maron/Class/PyBear_Analysis/Fig1.png\")"
@@ -1148,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86db5b2e",
+   "id": "e6076175",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1156,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba9cafc",
+   "id": "b78be419",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1164,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40376e9b",
+   "id": "a68efcfc",
    "metadata": {},
    "outputs": [],
    "source": []
