% drivers by city type pie chart

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "69226ef5",
+   "id": "eb897cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "dac18abf",
+   "id": "82b0491f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dcad7dbf",
+   "id": "be5bb361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "046675e4",
+   "id": "df0ea66b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "01cfc169",
+   "id": "5a3e45bd",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3bbab58a",
+   "id": "a84e64da",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5a5dd611",
+   "id": "31dd8256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f2faf2f7",
+   "id": "d52d650e",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b80a9331",
+   "id": "314101d5",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8974b63f",
+   "id": "2212e02f",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b90d1113",
+   "id": "dd795d7b",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "fbca6ac1",
+   "id": "d6feee03",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ed69876b",
+   "id": "5f0c1d55",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "4c8a343f",
+   "id": "d8645822",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e0fa165e",
+   "id": "ce132031",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e2347c9d",
+   "id": "bca98829",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a0910ad2",
+   "id": "09503c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d9ed4894",
+   "id": "91ea1652",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d9174397",
+   "id": "855acdf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "042da71d",
+   "id": "f2eefe7e",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c61c1784",
+   "id": "9afe9a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b7aae193",
+   "id": "564a48b7",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "08c9ccd3",
+   "id": "1b477f1c",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7a05a3b5",
+   "id": "2cc19174",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1c2bf721",
+   "id": "7723364a",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "75c3faa4",
+   "id": "ba157fdc",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "eafe0a94",
+   "id": "e06d60d6",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "140d43dc",
+   "id": "85b424db",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "52ba0765",
+   "id": "fced59fc",
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "88fcdf0a",
+   "id": "9e04b220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2e79d7e7",
+   "id": "6365b81f",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "814d389b",
+   "id": "43ac10c6",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "df3003eb",
+   "id": "3a4ef45f",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c051d553",
+   "id": "5a6de324",
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "331f6bef",
+   "id": "0ad1e701",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "7f7f9b0e",
+   "id": "f8ff10b1",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "55b80d80",
+   "id": "6096cd81",
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "2080dbce",
+   "id": "302d1e3c",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "72343613",
+   "id": "c1780fd1",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "27895e8b",
+   "id": "5d9b02e8",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "8cf92329",
+   "id": "1446e88e",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "b6648ab7",
+   "id": "efed1886",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "b7554380",
+   "id": "ba6b99c6",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "106d4066",
+   "id": "3da65774",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "317bf94a",
+   "id": "5297c10d",
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "28a82abe",
+   "id": "f7e6f88b",
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "5e89f0c9",
+   "id": "a38cf1c9",
    "metadata": {},
    "outputs": [
     {
@@ -1860,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "d3a6aad8",
+   "id": "ab624e4e",
    "metadata": {},
    "outputs": [
     {
@@ -1919,7 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c2dfec1d",
+   "id": "bbb8bf00",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "ae848c64",
+   "id": "62b33a40",
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "b7d5a888",
+   "id": "78efbe00",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "1cbfc97e",
+   "id": "acac1b0d",
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "54cd75d1",
+   "id": "d7d05549",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "d623eaa7",
+   "id": "39a73730",
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "ce79a061",
+   "id": "3976e160",
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "3c538732",
+   "id": "a81580a6",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "eea68dca",
+   "id": "a152fb93",
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "dac2a8d7",
+   "id": "1f6a0465",
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "68582e92",
+   "id": "77712475",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "fed47f84",
+   "id": "3a1f9abb",
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "d051b980",
+   "id": "f17e8138",
    "metadata": {},
    "outputs": [
     {
@@ -2377,8 +2377,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "id": "0446d7d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        2.623613\n",
+       "Suburban    16.481668\n",
+       "Urban       80.894719\n",
+       "Name: driver_count, dtype: float64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of drivers for each city type.\n",
+    "\n",
+    "driver_percents = 100 *city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] / city_data_df[\"driver_count\"].sum()\n",
+    "driver_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7a8079b8",
+   "id": "22cd62a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2386,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8eeefe",
+   "id": "24ebeec1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2394,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3be19e14",
+   "id": "2daa479e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2402,7 +2430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f955fe6",
+   "id": "5c2af0e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2410,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a63e4fd",
+   "id": "77c63fda",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2418,7 +2446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b74e9b",
+   "id": "7b3b03e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2426,7 +2454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e05567a",
+   "id": "41fb631f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2434,7 +2462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e08053ba",
+   "id": "7b05f168",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2442,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1210f97b",
+   "id": "c47a1b91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2450,15 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168e2c1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "753e1cce",
+   "id": "08afe79b",
    "metadata": {},
    "outputs": [],
    "source": []
